--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,1 +1,32 @@
+name: Generate Contribution Snake
 
+on:
+  # Runs once a day at 00:00 UTC
+  schedule:
+    - cron: "0 0 * * *"
+  # Allow manual runs
+  workflow_dispatch:
+  # Also run when you update main (optional)
+  push:
+    branches:
+      - main
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate snake svgs
+        uses: Platane/snk@v3
+        with:
+          github_user_name: OxMxDev
+          outputs: |
+            dist/contribution-snake.svg
+            dist/contribution-snake-dark.svg?palette=github-dark
+      - name: Publish to GitHub Pages branch
+        uses: crazy-max/ghaction-github-pages@v4
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
