--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,30 @@
 name: Generate Contribution Snake
 
 on:
-  # Runs once a day at 00:00 UTC
   schedule:
-    - cron: "0 0 * * *"
-  # Allow manual runs
-  workflow_dispatch:
-  # Also run when you update main (optional)
+    - cron: "0 0 * * *" # Runs every day at midnight
+  workflow_dispatch:     # Allows manual run
   push:
     branches:
       - main
-      - master
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate snake svgs
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: OxMxDev
           outputs: |
             dist/contribution-snake.svg
             dist/contribution-snake-dark.svg?palette=github-dark
-      - name: Publish to GitHub Pages branch
-        uses: crazy-max/ghaction-github-pages@v4
+
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
