--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,21 +12,21 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  - name: Checkout
+    uses: actions/checkout@v4 # Updated to v4
 
-      - name: Generate Snake
-        uses: Platane/snk@v3
-        with:
-          github_user_name: OxMxDev
-          outputs: |
-            dist/contribution-snake.svg
-            dist/contribution-snake-dark.svg?palette=github-dark
+  - name: Generate Snake
+    uses: Platane/snk@v3
+    with:
+      github_user_name: OxMxDev
+      outputs: |
+        dist/contribution-snake.svg
+        dist/contribution-snake-dark.svg?palette=github-dark
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  - name: Push to output branch
+    uses: crazy-max/ghaction-github-pages@v4 # Updated to v4
+    with:
+      target_branch: output
+      build_dir: dist
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
